--- a/css/style.css
+++ b/css/style.css
@@ -122,10 +122,10 @@ footer {
 }
 
 /* LAYOUT */
-/* .container {
+.container {
     max-width: 1000px;
     margin: 0 auto;
-} */
+}
 
 section {
     padding: 5em 1em;
@@ -151,17 +151,21 @@ section {
     margin: 1em auto;
 }
 
+/* FEATURE PROJECTS SECTION */
+.featured-works-heading {
+    color: red;
+    margin-bottom: 2em;
+}
 
 /* OVERLAPPING CARDS */
 .overlapping-cards {
     width: 100%;
-    /* max-width: 1500px; */
+    /* max-width: 1400px; */
     margin: 0 auto;
     padding-left: 2em;
     padding-right: 2em;
     border: 1.5px solid red;
     display: grid;
-
     grid-template-rows: repeat(var(--cards-count), var(--card-height));
     gap: 30px; /* adds space between rows */
 }
@@ -195,7 +199,7 @@ section {
 .ocard-image-container {
     display: flex;
     width: 100%;
-    height: 100%;
+    height: 90svh;
 }
 
 .ocard-image {
@@ -206,11 +210,12 @@ section {
 }
 
 
-
 .featured-works-heading {
     color: red;
     margin-bottom: 2em;
 }
+
+/* WORKS GRID SECTION */
 
 .works-heading {
     color: navy;
