--- a/css/style.css
+++ b/css/style.css
@@ -170,7 +170,7 @@ section {
 
 /* FEATURE PROJECTS SECTION */
 .featured-works-heading {
-    color: red;
+    color: rgb(170, 0, 255);
     margin-bottom: 2em;
 }
 
