--- a/css/style.css
+++ b/css/style.css
@@ -43,8 +43,8 @@ CSS TABLE OF CONTENTS
     /* DEFINE ALL COMMONLY USED COLORS HERE */
 
     --color-body-background: rgb(255, 255, 255);
-    --color-text-body: rgba(0, 0, 0, 0.8);
-    --color-text-headings: rgb(0 0 0 / 1);
+    --color-text-body: rgba(28, 61, 128);
+    --color-text-headings: rgba(28, 61, 128);
 
     --color-links: blue;
     --color-links-hover: darkblue;
