added another subpage

--- a/css/style.css
+++ b/css/style.css
@@ -422,7 +422,7 @@ section {
 }
   /* WORKS GRID ITEMS */
 .works-project {
-    background-color: #4CAF50;
+    background-color: #82b8ff;
     color: white;
     position: relative; 
     padding-top: 100%;  
