--- a/css/style.css
+++ b/css/style.css
@@ -359,13 +359,13 @@ section {
 /* OVERLAPPING CARDS */
 .overlapping-cards {
     width: 100%;
-    /* max-width: 1400px; */
+    max-width: 1480px;
     margin: 0 auto;
     padding-left: 2em;
     padding-right: 2em;
     border: 1.5px solid red;
     display: grid;
-    grid-template-rows: repeat(var(--cards-count), var(--card-height));
+    /* grid-template-rows: repeat(var(--cards-count), var(--card-height)); */
     gap: 30px; /* adds space between rows */
 }
 
@@ -407,9 +407,8 @@ section {
 .ocard-image {
     width: 100%;
     height: 100%; 
-    object-fit: contain; 
-    aspect-ratio: 1.7;
-    object-position: center;
+    object-fit: cover; 
+    /* aspect-ratio: 1.7; */
 }
 
 .project-name {
